--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Domov<span class="sr-only"></span></a>
-            </li>
+          <ul class="navbar-nav ml-auto">
             <li class="nav-item">
               <a class="nav-link" href="#">História</a>
             </li>
