--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
       <!--- Navigation --->
       <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Spišský hrad</a>
+        <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -30,23 +30,23 @@
           </ul>
         </div>
       </nav>
-      <!--- Carousel--->
 
+      <!--- Carousel--->
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
+        <ul class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
+        </ul>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/hrad1.png" class="d-block w-100" alt="...">
+            <img src="" class="d-block w-100">
           </div>
           <div class="carousel-item">
-            <img src="img/hrad2.png" class="d-block w-100" alt="...">
+            <img src="" class="d-block w-100">
           </div>
           <div class="carousel-item">
-            <img src="img/hrad3.png" class="d-block w-100" alt="...">
+            <img src="" class="d-block w-100">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -58,9 +58,6 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
-
-
-
       <!--- História --->
       <!--- Vstupenky --->
       <!--- Galéria --->
