--- a/index.html
+++ b/index.html
@@ -59,55 +59,55 @@
         </a>
       </div>
       <!--- História --->
+
       <!--- Vstupenky --->
       <div class="container">
-  <div class="card-deck mb-3 text-center">
-    <div class="card mb-4 shadow-sm">
-      <div class="card-header">
-        <h4 class="my-0 font-weight-normal">Free</h4>
+        <div class="row">
+          <div class="card-deck mb-3 text-center">
+            <div class="card mb-4 shadow-sm">
+              <div class="card-header">
+                <h4 class="my-0 font-weight-normal">Dospelé osoba</h4>
+              </div>
+              <div class="card-body">
+                <h1 class="card-title pricing-card-title" id="smaller_c">8.0 € <small class="text-muted" id="smaller">/celý hrad</small></h1>
+                <h1 class="card-title pricing-card-title"id="smaller_c">6.0 € <small class="text-muted" id="smaller">/stredné a dolné nádvorie</small></h1>
+                <h1 class="card-title pricing-card-title"id="smaller_c">10.0 € <small class="text-muted" id="smaller">/nočná prehliadka</small></h1>
+              </div>
+            </div>
+            <div class="card mb-4 shadow-sm">
+              <div class="card-header">
+                <h4 class="my-0 font-weight-normal">Študent</h4>
+              </div>
+              <div class="card-body">
+                <h1 class="card-title pricing-card-title"id="smaller_c"id="smaller_c"id="smaller_c"id="smaller_c"id="smaller_c"id="smaller_c">6.0 € <small class="text-muted" id="smaller">/celý hrad</small></h1>
+                <h1 class="card-title pricing-card-title"id="smaller_c"id="smaller_c"id="smaller_c"id="smaller_c"id="smaller_c">4.0 € <small class="text-muted" id="smaller">/stredné a dolné nádvorie</small></h1>
+                <h1 class="card-title pricing-card-title"id="smaller_c"id="smaller_c"id="smaller_c"id="smaller_c">8.0 € <small class="text-muted" id="smaller">/nočná prehliadka</small></h1>
+              </div>
+            </div>
+            <div class="card mb-4 shadow-sm">
+              <div class="card-header">
+                <h4 class="my-0 font-weight-normal">Deti <smaller>+ dôchodcovia, ZŤP</smaller></h4>
+              </div>
+
+              <div class="card-body">
+                  <h1 class="card-title pricing-card-title"id="smaller_c">4.0 € <small class="text-muted" id="smaller">/celý hrad</small></h1>
+                  <h1 class="card-title pricing-card-title"id="smaller_c"id="smaller_c">4.0 € <small class="text-muted" id="smaller">/stredné a dolné nádvorie</small></h1>
+                  <h1 class="card-title pricing-card-title"id="smaller_c">8.0 € <small class="text-muted" id="smaller">/nočná prehliadka</small></h1>
+              </div>
+            </div>
+            <div class="card mb-4 shadow-sm">
+              <div class="card-header">
+                <h4 class="my-0 font-weight-normal">Rodina (4 osoby) </h4>
+              </div>
+
+              <div class="card-body">
+                  <h1 class="card-title pricing-card-title"id="smaller_c">19.0 € <small class="text-muted" id="smaller">/celý hrad</small></h1>
+                  <h1 class="card-title pricing-card-title"id="smaller_c">--- € <small class="text-muted" id="smaller">/stredné a dolné nádvorie</small></h1>
+                  <h1 class="card-title pricing-card-title"id="smaller_c">25.0 € <small class="text-muted" id="smaller">/nočná prehliadka</small></h1>
+              </div>
+          </div>
+        </div>
       </div>
-      <div class="card-body">
-        <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ mo</small></h1>
-        <ul class="list-unstyled mt-3 mb-4">
-          <li>10 users included</li>
-          <li>2 GB of storage</li>
-          <li>Email support</li>
-          <li>Help center access</li>
-        </ul>
-        <button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>
-      </div>
-    </div>
-    <div class="card mb-4 shadow-sm">
-      <div class="card-header">
-        <h4 class="my-0 font-weight-normal">Pro</h4>
-      </div>
-      <div class="card-body">
-        <h1 class="card-title pricing-card-title">$15 <small class="text-muted">/ mo</small></h1>
-        <ul class="list-unstyled mt-3 mb-4">
-          <li>20 users included</li>
-          <li>10 GB of storage</li>
-          <li>Priority email support</li>
-          <li>Help center access</li>
-        </ul>
-        <button type="button" class="btn btn-lg btn-block btn-primary">Get started</button>
-      </div>
-    </div>
-    <div class="card mb-4 shadow-sm">
-      <div class="card-header">
-        <h4 class="my-0 font-weight-normal">Enterprise</h4>
-      </div>
-      <div class="card-body">
-        <h1 class="card-title pricing-card-title">$29 <small class="text-muted">/ mo</small></h1>
-        <ul class="list-unstyled mt-3 mb-4">
-          <li>30 users included</li>
-          <li>15 GB of storage</li>
-          <li>Phone and email support</li>
-          <li>Help center access</li>
-        </ul>
-        <button type="button" class="btn btn-lg btn-block btn-primary">Contact us</button>
-      </div>
-    </div>
-  </div>
       <!--- Galéria --->
       <!--- Kontakt --->
 
