--- a/index.html
+++ b/index.html
@@ -59,6 +59,22 @@
         </a>
       </div>
       <!--- História --->
+      <section>
+        <div class="container-fluid">
+          <div class="jumbotron">
+            <h1>História</h1>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lobortis metus at
+              metus consectetur, et molestie magna fermentum. Integer hendrerit sed ipsum eget porttitor.
+              Aenean ut finibus quam. Mauris nec velit non nulla hendrerit pretium ac sit amet odio. Integer
+              pulvinar malesuada lobortis. Integer aliquet massa odio. Phasellus posuere varius ex. Sed bibendum
+              erat vel elit rutrum congue. Aliquam euismod lectus id velit malesuada, at gravida justo finibus.
+              Nulla in viverra quam. Sed ultricies lorem nisl, eu rhoncus sapien tempor id. Fusce sed purus rutrum eros
+              pulvinar aliquet at eget arcu.</p>
+          </div>
+        </div>
+      </section>
+      <!-- Predelovací obrázok-->
+
 
       <!--- Vstupenky --->
       <div class="container">
