--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
               erat vel elit rutrum congue. Aliquam euismod lectus id velit malesuada, at gravida justo finibus.
               Nulla in viverra quam. Sed ultricies lorem nisl, eu rhoncus sapien tempor id. Fusce sed purus rutrum eros
               pulvinar aliquet at eget arcu.</p>
+              <img src="" alt="">
           </div>
         </div>
       </section>
